tests/valid/definite/Ensures_Valid_4.whiley
int f(int x) where x>=0 && $>=0 && x>=0:
    return x

void System::main([string] args):
    print str(f(10))
