tests/invalid/ArrayGenerator_Invalid_5.whiley
function f(bool b) -> int[]:
    return [f();10]